@@ -1,3 +1,10 @@
+2002-08-27  Theodore A. Roth  <troth@verinet.com>
+
+	* include/avr/iom128.h: Updated IO register names to match latest
+		datasheet from Atmel. (modified submission from Svein E. Seldal
+		<Svein.Seldal@solidas.com>)
+	* configure.in(AM_INIT_AUTOMAKE): Bump version.
+
 2002-08-22  Theodore A. Roth  <troth@verinet.com>
 
 	* common/macros.inc: Use <avr/io.h> instead of <io.h>.
